Add models translations
